--- a/src/unnamedlibrary/unnamedMainMenu.form
+++ b/src/unnamedlibrary/unnamedMainMenu.form
@@ -280,6 +280,9 @@
                           <Color id="Hand Cursor"/>
                         </Property>
                       </Properties>
+                      <Events>
+                        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnRenewActionPerformed"/>
+                      </Events>
                     </Component>
                     <Component class="javax.swing.JButton" name="btnReturn">
                       <Properties>
