--- a/src/unnamedlibrary/unnamedMainMenu.form
+++ b/src/unnamedlibrary/unnamedMainMenu.form
@@ -298,6 +298,9 @@
                           <Color id="Hand Cursor"/>
                         </Property>
                       </Properties>
+                      <Events>
+                        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnReturnActionPerformed"/>
+                      </Events>
                     </Component>
                     <Component class="javax.swing.JButton" name="btnHistory">
                       <Properties>
