--- a/src/unnamedlibrary/unnamedRenewMenu.form
+++ b/src/unnamedlibrary/unnamedRenewMenu.form
@@ -7,6 +7,7 @@
     <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
       <Dimension value="[1218, 820]"/>
     </Property>
+    <Property name="name" type="java.lang.String" value="renewFrame" noResource="true"/>
     <Property name="resizable" type="boolean" value="false"/>
   </Properties>
   <SyntheticProperties>
