Applied deleted book and client mechanism to borrow, renew, request and history

--- a/src/unnamedlibrary/unnamedBorrowMenu.form
+++ b/src/unnamedlibrary/unnamedBorrowMenu.form
@@ -108,7 +108,7 @@
                                   <Component id="btnLoadBook" min="-2" max="-2" attributes="0"/>
                                   <Group type="102" alignment="0" attributes="0">
                                       <Component id="txtClientID" min="-2" pref="157" max="-2" attributes="0"/>
-                                      <EmptySpace pref="17" max="32767" attributes="0"/>
+                                      <EmptySpace min="-2" pref="17" max="-2" attributes="0"/>
                                       <Component id="btnLoadClient" min="-2" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
@@ -118,12 +118,12 @@
                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
                               <Component id="lblBorrowDue" min="-2" max="-2" attributes="0"/>
                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                              <Component id="txtBorrowDue" min="-2" max="-2" attributes="0"/>
+                              <Component id="txtBorrowDue" min="-2" pref="150" max="-2" attributes="0"/>
                           </Group>
                       </Group>
-                      <EmptySpace min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                       <Component id="jSeparator1" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace pref="384" max="32767" attributes="0"/>
+                      <EmptySpace pref="388" max="32767" attributes="0"/>
                       <Component id="btnCancel" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
@@ -358,6 +358,12 @@
                 <Property name="focusable" type="boolean" value="false"/>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Leelawadee UI" size="18" style="0"/>
+                </Property>
+                <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+                  <Dimension value="[126, 31]"/>
+                </Property>
+                <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+                  <Dimension value="[126, 31]"/>
                 </Property>
               </Properties>
             </Component>
