--- a/src/unnamedlibrary/unnamedClientMenu.form
+++ b/src/unnamedlibrary/unnamedClientMenu.form
@@ -529,7 +529,7 @@
                         </Property>
                         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
                           <StringArray count="1">
-                            <StringItem index="0" value="Client ID"/>
+                            <StringItem index="0" value="Select Existing Client"/>
                           </StringArray>
                         </Property>
                         <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
