--- a/src/unnamedlibrary/unnamedRenewMenu.form
+++ b/src/unnamedlibrary/unnamedRenewMenu.form
@@ -106,7 +106,7 @@
                                       <Group type="102" attributes="0">
                                           <Component id="lblBorrowDue" min="-2" max="-2" attributes="0"/>
                                           <EmptySpace max="-2" attributes="0"/>
-                                          <Component id="txtBorrowDue" min="-2" max="-2" attributes="0"/>
+                                          <Component id="txtBorrowDue" max="32767" attributes="0"/>
                                           <EmptySpace type="separate" max="-2" attributes="0"/>
                                           <Component id="lblIsOverdue" min="-2" max="-2" attributes="0"/>
                                       </Group>
@@ -293,6 +293,12 @@
                 <Property name="focusable" type="boolean" value="false"/>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Leelawadee UI" size="18" style="0"/>
+                </Property>
+                <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+                  <Dimension value="[126, 31]"/>
+                </Property>
+                <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+                  <Dimension value="[126, 31]"/>
                 </Property>
               </Properties>
             </Component>
