--- a/src/unnamedlibrary/unnamedReturnMenu.form
+++ b/src/unnamedlibrary/unnamedReturnMenu.form
@@ -84,7 +84,7 @@
                           <Component id="lblBorrowID" alignment="0" max="32767" attributes="0"/>
                           <Component id="lblBookID" alignment="0" max="32767" attributes="0"/>
                       </Group>
-                      <EmptySpace pref="23" max="32767" attributes="0"/>
+                      <EmptySpace pref="22" max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="cbxClientID" min="-2" pref="130" max="-2" attributes="0"/>
@@ -109,7 +109,7 @@
                                       <Group type="102" alignment="0" attributes="0">
                                           <Component id="lblBorrowDue" min="-2" max="-2" attributes="0"/>
                                           <EmptySpace max="-2" attributes="0"/>
-                                          <Component id="txtBorrowDue" min="-2" max="-2" attributes="0"/>
+                                          <Component id="txtBorrowDue" min="-2" pref="150" max="-2" attributes="0"/>
                                           <EmptySpace type="separate" max="-2" attributes="0"/>
                                           <Component id="lblIsOverdue" min="-2" max="-2" attributes="0"/>
                                       </Group>
@@ -118,9 +118,9 @@
                               </Group>
                           </Group>
                       </Group>
-                      <EmptySpace pref="23" max="32767" attributes="0"/>
+                      <EmptySpace pref="22" max="32767" attributes="0"/>
                       <Component id="jSeparator1" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace pref="345" max="32767" attributes="0"/>
+                      <EmptySpace pref="343" max="32767" attributes="0"/>
                       <Component id="btnCancel" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
@@ -296,6 +296,12 @@
                 <Property name="focusable" type="boolean" value="false"/>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Leelawadee UI" size="18" style="0"/>
+                </Property>
+                <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+                  <Dimension value="[126, 31]"/>
+                </Property>
+                <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+                  <Dimension value="[126, 31]"/>
                 </Property>
               </Properties>
             </Component>
