Added reset function for borrow, return, renew, history, book and client

--- a/src/unnamedlibrary/unnamedHistoryMenu.form
+++ b/src/unnamedlibrary/unnamedHistoryMenu.form
@@ -1228,6 +1228,9 @@
                           <Color id="Hand Cursor"/>
                         </Property>
                       </Properties>
+                      <Events>
+                        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton5ActionPerformed"/>
+                      </Events>
                     </Component>
                   </SubComponents>
                 </Container>
