--- a/src/unnamedlibrary/unnamedClientMenu.form
+++ b/src/unnamedlibrary/unnamedClientMenu.form
@@ -267,6 +267,9 @@
                           <Color id="Hand Cursor"/>
                         </Property>
                       </Properties>
+                      <Events>
+                        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnResetActionPerformed"/>
+                      </Events>
                     </Component>
                   </SubComponents>
                 </Container>
